CSL-453: Resolve layout issues with list cards
Improved handling of missing cover images.
Re-added images at `sm` breakpoint.
Added mockups test cards with no images.

--- a/src/frontend/scss/site/_library.scss
+++ b/src/frontend/scss/site/_library.scss
@@ -134,7 +134,7 @@
     }
 
     .card-col-img {
-        @include media-breakpoint-down(sm) {
+        @include media-breakpoint-down(xs) {
             display: none;
         }
     }
